welcome.lessons.welcome.array.basics.Array1.scala.error
Array1:3: error: not found: value x
   for(compteur <- 1 to x){
                        ^Array1:7: error: not found: value x
   for(compteur <- 1 to x){
                        ^